[package]
name = "wow"
version = "0.1.0"
description = "A fast web framework"
readme = "README.md"
documentation = "https://docs.rs/wow"
repository = "https://github.com/jellybobbin/wow"
license = "MIT"
keywords = ["http", "web", "framework"]
authors = ["jellybobbin <jellybobbin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]